New style, Gamejam content

--- a/_includes/gamejam-card.html
+++ b/_includes/gamejam-card.html
@@ -1,23 +1,22 @@
-<div class="col-md-4 mb-3"> <div class="card h-100">
+<div class="col-md-4 mb-4"> <div class="card h-100 card-light">
 
+	<div class="card-header text-center">
+		<a href="{{ game.url | absolute_url }}" aria-label="Thumbnail">
+			<h5>{{ game.title | strip_html }}</h5>
+		</a>
+	</div>
+	
 	<!-- Thumbnail -->
-	<!-- TODO add the gray effect from post-image -->
 	{% if game.thumbnail-img %}
 		<a href="{{ game.url | absolute_url }}" aria-label="Thumbnail">
 			<img src="{{"gamejams/img/" | absolute_url}}{{ game.thumbnail-img}}" class="card-img-top thumbnail ratio-16x9" alt="Post thumbnail">
 		</a>
 	{% endif %}
 
+
 	<div class="card-body">
-		<a href="{{ game.url | absolute_url }}" aria-label="Thumbnail">
-			<h5 class="card-title">{{ game.title | strip_html }}</h5>
-		</a>
-		{% if game.salePitch%}
-			<p class="card-text">{{game.salePitch}}</p>
-			<hr>
-		{% endif %}
 		{% if game.shortdescription%}
-			<p class="card-text">{{game.shortdescription}}</p>
+			<p class="card-text text-justify">{{game.shortdescription}}</p>
 		{% endif %}
 	</div>
 		
@@ -31,7 +30,7 @@
 		</div>
 	{% endif %}
 	
-	<div class="card-footer bg-transparent ">
-		<a href="{{ game.url | absolute_url }}" class="post-read-more">Read&nbsp;More&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
+	<div class="card-footer bg-transparent">
+		<a href="{{ game.url | absolute_url }}" class="post-read-more float-right">Read&nbsp;More&nbsp;<i class="fa fa-arrow-circle-right"></i></a>
 	</div>
 </div> </div> 
