Added Evil tracking!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-P42P3KR1TD"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-P42P3KR1TD');
+	</script>
 
   {% capture title %}
     {%- if page.share-title -%}
